--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div>
         <ul id="navbar">
           <li><a href="index.html">Home</a></li>
+          <!-- we can add class="active"to home page to make it active -->
           <li><a href="shop.html">Shop</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="about.html">About</a></li>
