--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
         </ul>
       </div>
     </section>
+
+    <section id="hero">
+      <h4>Trade-in-offer</h4>
+      <h2>Super value deals</h2>
+      <h1>On all products</h1>
+      <p>Save more with coupons & and up to 70% off!</p>
+      <button>Shop Now</button>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
